--- a/index.html
+++ b/index.html
@@ -26,14 +26,20 @@
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
-            <img class="computer-image" src="images/computer.png" alt="programming language c#">
-            <h3>C#</h3>
-            <p>This is one of my most used languages during my time at the university learning as a Software Engineer.</p>
+            <img class="computer-image" src="images/computer.png" alt="back-end skill c#">
+            <h3>C# and Python</h3>
+            <p>C# is one of my most used languages during my time at the university learning as a Software Engineer.</p>
+            <p>Python is my second most used language as there are classes that can't be easily done on C#, for example, Machine Learning and Statistics</p>
           </div>
           <div class="skill-row">
             <img class="database-image" src="images/computer.png" alt="database design and deployment">
             <h3>Database design and deployment</h3>
             <p>In most of my academic projects, I've used Azure to host them in the cloud while locally I use SMSS to design DBs with scripts</p>
+          </div>
+          <div class="skill-row">
+            <img class="database-image" src="images/computer.png" alt="front-end skill HTML/CSS/JS">
+            <h3>Front-end skillset (HTML/CSS/JS)</h3>
+            <p>I am learning the fundamental skillset for front-end development. At the moment, I want to focus on building a solid foundation before diving into frameworks and libraries.</p>
           </div>
         </div>
         <hr>
